--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
     <link rel="stylesheet" type="text/css" href="assets\css\normalize.css" />
+    <link rel="icon" type="image" href="./assets/img/icone.png"/>
     <link rel="stylesheet" type="text/css" href="assets\css\template.css" />
     <link href="./assets/fontawesome/css/all.css" rel="stylesheet">
 </head>
